# ctx-version-control-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
cli/: pyproject.toml
cli/ctxvcs_cli/: main.py
ctxvcs/: config.py
ctxvcs/api/: deps.py  main.py
ctxvcs/compiler/: build.py  pages.py
ctxvcs/core/: canonical.py  default_schema.py  entry.py  prefilter.py
ctxvcs/dag/: blame.py  trees.py
ctxvcs/embed/: __init__.py
ctxvcs/llm/: claude.py  extract.py  fakes.py  reconcile.py  types.py
ctxvcs/migrations/: env.py  script.py.mako
ctxvcs/pipeline/: graph.py
ctxvcs/store/: commit_txn.py  db.py  models.py  repo_ops.py
ctxvcs/tasks/: runner.py
ctxvcs/tests/: conftest.py  test_auth.py  test_blame.py  test_canonical.py  test_compiler_pg.py  test_invariants_pg.py  test_notes_path.py  test_prefilter_and_policy.py  test_routing_rules.py  test_scenarios.py  test_validation.py
deploy/: Caddyfile  Dockerfile.api  Dockerfile.web  README.md  compose.prod.yml  env.prod.example
docs/: SOP.md  SOP.zh-CN.md  context-vcs-spec.md
evals/: run_reconcile.py  run_scenarios.py  run_skill.py  scenario_lib.py
evals/fixtures/: reconcile_seed.jsonl
evals/judge/: judge_config.json  rubric.md
evals/reports/: 20260704-073054-reconcile-fake.json  20260704-073054-reconcile-fake.md  20260704-073207-reconcile-fake.json  20260704-073207-reconcile-fake.md  20260704-074738-scenarios-fake.md  20260704-075122-skill-fake.md  (+21 more)
scripts/: smoke_http.py
skill/: SKILL.md  ctxvcs_cli.py
web/: package-lock.json  package.json
(+51 files in other folders)
