[project]
name = "ctxvcs"
version = "0.1.0"
description = "Context VCS — Git-like version control for a team's agent working context"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic[email]>=2.8",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0.32",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pgvector>=0.3.2",
    "langgraph>=0.2.20",
    "anthropic>=0.40",
    "openai>=1.40",
    "httpx>=0.27",
    "jsonschema>=4.23",
    "bcrypt>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["ctxvcs/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 110
target-version = "py312"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ctxvcs"]
