[project]
name = "ctxvcs"
version = "0.1.0"
description = "Context VCS client — push and read your team's working context"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.scripts]
ctxvcs = "ctxvcs_cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ctxvcs_cli"]
